# plate

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
docs/screenshots/: README.md
plate/: __init__.py  app.py  batch.py  cli.py  color.py  config.py  pipeline.py  presets.py  project.py
plate/export/: __init__.py  comfy_job.py  export_job.py  manifest_writer.py  nuke_export.py  proxy_job.py
plate/media/: __init__.py  ffmpeg.py  ffprobe.py  thumbnails.py
plate/models/: __init__.py  frame_range.py  plate_session.py  recent_files.py  shot_queue.py  video_metadata.py
plate/ui/: __init__.py  export_dialog.py  icons.py  main_window.py  progress_dialog.py  scrubber.py  session_controller.py  shot_queue_widget.py  style.qss  timeline.py  transport_controls.py  viewer.py
plateprep/: __init__.py
test_assets/: identity.cube  invert_green.cube  test_config.ocio
tests/: conftest.py  test_batch.py  test_cli.py  test_color.py  test_config.py  test_export_jobs.py  test_ffmpeg.py  test_ffprobe.py  test_frame_range.py  test_integration.py  test_manifest_writer.py  test_pipeline.py  test_plate_session.py  test_plateprep_alias.py  test_presets.py  test_project.py  test_recent_files.py  test_shot_queue.py  test_video_metadata.py
tests/fixtures/: sample_batch.json  sample_ffprobe_output.json
tests/ui/: conftest.py  test_scrubber.py  test_session_controller.py  test_timeline.py  test_transport_controls.py  test_viewer.py
